# python-project-49

./: .gitignore  Makefile  README.md  brain-gsd.cast  brain-prime.cast  brain-progression.cast  demo.cast  pyproject.toml
brain_games/: cli.py
brain_games/games/: brain_welcome.py  calc_game.py  even_game.py  gcd_game.py  logic_calc.py  logic_even.py  logic_gcd.py  logic_prime.py  logic_progression.py  prime_game.py  progression_game.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py  calc_game.py  even_game.py  logic.py  logic_calc.py  main.py
